# ai-comparison-agent

./: .gitignore  README.md  render.yaml  requirements.txt
backend/: pyproject.toml
backend/pricecompare/: __init__.py  config.py  errors.py  models.py  origin.py  retailers.py  service.py  web.py
backend/pricecompare/processing/: __init__.py  base.py  noise_filter.py  product_matcher.py  ranker.py  rewards_enricher.py  store_normalizer.py
backend/pricecompare/providers/: __init__.py  base.py  fallback.py  mock.py  serpapi.py
backend/pricecompare/resolvers/: __init__.py  base.py  pipeline.py  strategies.py
backend/pricecompare/rewards/: __init__.py  base.py  onpoint.py
backend/storelocator/: __init__.py  brands.py  config.py  errors.py  geo.py  models.py  service.py
backend/storelocator/providers/: __init__.py  base.py  google_places.py  mock.py
frontend/: index.html  stores.html
frontend/css/: styles.css
frontend/js/: app.js  stores.js
server/: .env.example  __init__.py  app.py  container.py  main.py  paths.py  requirements.txt  schemas.py
server/routes/: __init__.py  api.py  pages.py  stores.py
