[project]
name = "pricecompare"
version = "2.0.0"
description = "Extensible price-comparison agent core (framework-agnostic domain logic)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pricecompare*"]
