[project]
name = "pricecompare"
version = "3.0.0"
description = "OnPoint agentic shopping assistant — framework-agnostic domain logic (price comparison + store locator)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pricecompare*", "storelocator*"]
